--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <span class="result-score" data-your-score>0</span>
             </div>
             <div data-final-column>
-                No-Face <br>
+                noFace <br>
                 <span class="result-score" data-computer-score>0</span>
             </div>
         </section>
